Provide Java 11 compatibility